--- a/Creating Effect/Image folder/photo_style.css
+++ b/Creating Effect/Image folder/photo_style.css
@@ -26,7 +26,12 @@ p {
     width: 300px;
     height: 169px;
 }
-.phot-overlay {
+.photo-container img {
+    max-width: 100%;
+    width: 300px;
+    height: 169px;
+}
+.photo-overlay {
     color: #fff;
     position: absolute;
     top: 0;
