--- a/The project Folder/CSS/basic_style.css
+++ b/The project Folder/CSS/basic_style.css
@@ -19,7 +19,7 @@ text-shadow: 1px .5px 4px rgba (0,0,0 0.6);
 /*=================================================
    SELECT ALL SQUARES IN THE ARRAY
    ================================================*/
-   .container  .square:nth-child(-n+4) {
+   .container  .squares:nth-child(-n+4) {
     background-image: url("../Images/smileyface2.png");
     color:#fff;
     float: left;
@@ -35,9 +35,9 @@ text-shadow: 1px .5px 4px rgba (0,0,0 0.6);
    /*==============================================
      SELECT ALL SQUARES PARAGRAPHS IN THE ARRAY
      ===============================================*/
-.square:nth-child(-n+4) p{
+.squares:nth-child(-n+4) p{
     font-family: "Helvetica Neue", Arial, Helvetica, Arial, sans-serif;
-    front-size: 1.5cm;
+    font-size: 1.5em;
     font-weight: 900;
     text-align: center;
     margin: 0;
@@ -75,7 +75,7 @@ text-shadow: 1px .5px 4px rgba (0,0,0 0.6);
     animation-timing-function: cubic-bezier(2.5, .2, .3, 2);
    }
 
-   .square:nth-child(1) :hover {
+   .squares:nth-child(1) :hover {
     background: #13b4ff;
    }
 
@@ -91,11 +91,11 @@ text-shadow: 1px .5px 4px rgba (0,0,0 0.6);
     background: #77b800;
    }
 
-   .button:hover {
+   /*.button:hover {
     background-color: #33fb14;
     color: #fff;
     cursor: pointer;
-   }
+   }*/
 
 
     /*=============================================
@@ -104,7 +104,7 @@ text-shadow: 1px .5px 4px rgba (0,0,0 0.6);
     @keyframes race {
     0%, 100% {
         transform: translateY(0px);
-        background-image: url("../Images/icons2.png");
+        background-image: url("../Images/smileyface1.png");
     }
     50% {
         transform: translateY(330px);
